# openvpn_auth_ldap

./: CMakeLists.txt  README.md  teste.cc
src/: config.h.in  main_obj.cpp  main_obj.hpp  openvpn_plugin.cpp  settings.cpp  settings.hpp  simple.c
